# 251104

./: .cursorrules  .gitignore  ANALYSIS_IDEAS.md  ANALYSIS_SUMMARY.md  ARCGIS_INTEGRATION.md  AT_HUB_GUIDE.md  DAYLIGHT_ANALYSIS_SUMMARY.md  EXTRACT_FROM_APP.md  QUICK_START_ARCGIS.md  README.md  REAL_DATA_STATUS.md  analyze_real_data.py  appalachian_trail_analysis.ipynb  arcgis_enhanced_analysis.ipynb  arcgis_enhanced_analysis.ipynb.bak  arcgis_example.py  create_clean_trail_map.py  create_comprehensive_analysis_map.py  create_detailed_trail_map.py  create_real_analysis_map.py  create_real_trail_map.py  daylight_analysis_report.py  daylight_fkt_comparison.py  explore_at_hub.py  extract_app_config.py  fetch_complete_at_data.py  fetch_real_at_data.py  fetch_real_shelters_water.py  find_at_services.py  fkt_analysis_report.py  main_analysis.py  process_real_at_data.py  pyproject.toml  test_service_url.py
.cursor/rules/: data-flow-pipeline.mdc  terrain-generation-model.mdc  trail-analysis-algorithms.mdc  visualization-specifications.mdc
.giga/: specifications.json
scripts/: refactor_notebook_readability.py
src/: __init__.py  analysis.py  arcgis_integration.py  data_loader.py  daylight_analysis.py  daylight_visualization.py  fkt_analysis.py  fkt_visualization.py  visualization.py
