[project]
name = "appalachian-trail-analysis"
version = "0.1.0"
description = "Analysis and visualization of the Appalachian Trail"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "folium>=0.14.0",
    "gpxpy>=1.5.0",
    "requests>=2.31.0",
    "plotly>=5.14.0",
    "scipy>=1.11.0",
    "geopy>=2.3.0",
    "arcgis>=2.4.2",
    "geopandas>=1.1.1",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


